# vetclinic_service

./: .gitignore  Dockerfile  app.py  data_flow_diagram.drawio  docker-compose.yml  entity_diagram.drawio  functional_diagram.drawio  pyproject.toml  ЛР_1_ТРП-3-20_НосовНИ_ПроектныйПрактикум.docx  ЛР_2_ТРП-3-20_НосовНИ_ПроектныйПрактикум.docx
backend/: app.py
backend/migrations/: V1__create_initial_tables.sql  test.sql
backend/synth-data/: client_payments.json  pets.json
docs/: activity_diagram.drawio  data_flow_diagram.drawio  structure_diagram.drawio  use_case_diagram.drawio  ЛР_1_ТРП-3-20_НосовНИ_ПроектныйПрактикум.docx
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js  index.css
frontend/src/API/: ClientService.js
frontend/src/components/: AppointmentItem.jsx  AppointmentList.jsx  ClientItem.jsx  ClientList.jsx  PetItem.jsx  PetList.jsx
migrations/: V1__create_initial_tables.sql  V2__create_view_appointment_payments.sql
synth-data/: appointments.json  client_payments.json  clients.json  employees.json
vetclinic_service/: config.py  database.py
vetclinic_service/appointments/: deps.py  routes.py  service.py
vetclinic_service/client_payments/: repo.py  routes.py
vetclinic_service/clients/: repo.py  schemas.py
vetclinic_service/core/appointments/: routes.py  schemas.py
vetclinic_service/core/client_payments/: deps.py  schemas.py
vetclinic_service/core/clients/: deps.py
vetclinic_service/employees/: deps.py  repo.py  schemas.py  service.py
vetclinic_service/pets/: deps.py  repo.py  routes.py  service.py
(+29 files in other folders)
