[tool.poetry]
name = "vetclinic-service"
version = "0.1.0"
description = ""
authors = ["n1kolaypython <sh4retime@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["uvicorn"], version = "^0.110.0"}
asyncpg = "^0.29.0"
pydantic = "^2.6.3"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
